fixed a warning generated because of the need of parameter declaration

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(community_sim)
 export(csd_estimate)
 export(csim2pam)
 export(eigen_bam)
+export(jaccard)
 export(model2sparse)
 export(occs2sparse)
 export(pam2bioindex)
