Added functions to permute Presence-Absence-Matrices

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(model2sparse)
 export(occs2sparse)
 export(pam2bioindex)
 export(pam2richness)
+export(permute_pam)
 export(sdm_sim)
 export(shape2Grid)
 export(sim2Animation)
@@ -34,3 +35,5 @@ importFrom(Rdpack,reprompt)
 importFrom(magrittr,"%>%")
 importFrom(methods,as)
 importFrom(methods,new)
+useDynLib(bam)
+
