--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,9 @@ Imports:
     igraph (>= 1.2),
     leaflet (>= 2.0),
     Rdpack (>= 0.11.0),
-    animation (>= 2.3)
+    animation (>= 2.3),
+    RcppArmadillo (>= 0.8),
+    Rcpp (>= 0.12.18)
 Suggest: 
     maptools(>= 0.9.4), sp(>= 1.3.0)
 RdMacros: Rdpack
@@ -39,3 +41,4 @@ Suggests:
     knitr,
     rmarkdown
 VignetteBuilder: knitr
+LinkingTo: Rcpp, RcppArmadillo
