--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ export(shape2Grid)
 export(sim2Animation)
 export(sim2Raster)
 exportClasses(bam)
+exportClasses(bioindex)
+exportClasses(bioindex_sparse)
 exportClasses(csd)
 exportClasses(g_area)
 exportClasses(pam)
@@ -36,4 +38,3 @@ importFrom(magrittr,"%>%")
 importFrom(methods,as)
 importFrom(methods,new)
 useDynLib(bam)
-
