--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,8 @@ Imports:
     leaflet (>= 2.0),
     Rdpack (>= 0.11.0),
     animation (>= 2.3),
+    future (>= 1.18.0),
+    furrr (>= 0.1.0),
     Rcpp (>= 0.12.18)
 Suggest: 
     maptools(>= 0.9.4), sp(>= 1.3.0)
