--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: bam
 Type: Package
 Title: Species Distribution Models in the light of the BAM theory
-Version: 0.2.2.1
-Date: 2020-31-10
+Version: 0.4.2.1
+Date: 2020-03-11
 Authors@R: c(person("Luis", "Osorio-Olvera", 
                  email = "luismurao@gmail.com", 
                  role = c("aut", "cre"),
@@ -31,6 +31,8 @@ Imports:
     leaflet (>= 2.0),
     Rdpack (>= 0.11.0),
     animation (>= 2.3),
+    future (>= 1.18.0),
+    furrr (>= 0.1.0),
     Rcpp (>= 0.12.18)
 Suggest: 
     maptools(>= 0.9.4), sp(>= 1.3.0)
