--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,11 @@ export(bam_sim)
 export(community_sim)
 export(csd_estimate)
 export(csim2pam)
+export(diversity_range_analysis)
 export(eigen_bam)
 export(jaccard)
 export(model2sparse)
+export(null_dispersion_field_distribution)
 export(occs2sparse)
 export(pam2bioindex)
 export(pam2richness)
@@ -22,10 +24,12 @@ exportClasses(bam)
 exportClasses(bioindex)
 exportClasses(bioindex_sparse)
 exportClasses(csd)
+exportClasses(diversity_range)
 exportClasses(g_area)
 exportClasses(pam)
 exportClasses(setA)
 exportClasses(setM)
+exportMethods(plot)
 exportMethods(predict)
 exportMethods(show)
 import(Matrix)
@@ -33,7 +37,12 @@ import(leaflet)
 importClassesFrom(Matrix,dgCMatrix)
 importClassesFrom(raster,RasterLayer)
 importClassesFrom(raster,RasterStack)
+importFrom(Rcpp,sourceCpp)
 importFrom(Rdpack,reprompt)
+importFrom(future,multisession)
+importFrom(future,plan)
+importFrom(future,sequential)
+importFrom(future,tweak)
 importFrom(magrittr,"%>%")
 importFrom(methods,as)
 importFrom(methods,new)
