Added a function to convert raster models to pams

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(diversity_range_analysis)
 export(eigen_bam)
 export(jaccard)
 export(model2sparse)
+export(models2pam)
 export(null_dispersion_field_distribution)
 export(occs2sparse)
 export(pam2bioindex)
