Stochastic version of the bam_sim function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(adj_mat)
 export(bam_clusters)
 export(bam_islands)
 export(bam_sim)
+export(bam_ssim)
 export(community_sim)
 export(csd_estimate)
 export(csim2pam)
