Fixed documentation for classes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(sim2Raster)
 exportClasses(bam)
 exportClasses(bioindex)
 exportClasses(bioindex_sparse)
+exportClasses(community_sim)
 exportClasses(csd)
 exportClasses(diversity_range)
 exportClasses(g_area)
