--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,20 +5,27 @@ export(bam_clusters)
 export(bam_islands)
 export(bam_sim)
 export(bam_ssim)
+export(bioindex)
+export(bioindex_sparse)
 export(community_sim)
+export(csd)
 export(csd_estimate)
 export(csim2pam)
+export(diversity_range)
 export(diversity_range_analysis)
 export(eigen_bam)
+export(g_area)
 export(jaccard)
 export(model2sparse)
 export(models2pam)
 export(null_dispersion_field_distribution)
 export(occs2sparse)
+export(pam)
 export(pam2bioindex)
 export(pam2richness)
 export(permute_pam)
 export(sdm_sim)
+export(setA)
 export(shape2Grid)
 export(sim2Animation)
 export(sim2Raster)
